# my_test_project

./: .gitattributes  404.html  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
ADRs/: index.html
CHANGELOG/: index.html
discussions/: index.html
discussions/how_is_this_different_from_xyz/: index.html
docs/: .pages  CHANGELOG.md  changelog.md  discussions.md  how_to_guides.md  index.md
docs/discussions/: how_is_this_different_from_xyz.md
docs/how_to/: developers.md
docs/how_to_guides/: installation.md  running_the_tests.md  setting_up_dev_environment.md
docs__BAK/: discussions.md  how_to_guides.md  index.md
how_to_guides/: index.html
how_to_guides/installation/: index.html
how_to_guides/running_the_tests/: index.html
how_to_guides/setting_up_dev_environment/: index.html
my_test_project/: __init__.py  _version.py
notebooks/: Example_test_notebook.ipynb  context.py
reference_guides/: index.html
reference_guides/some_reference_guide/: index.html
search/: search_index.json
tests/: __init__.py  test_my_test_project.py
tutorials/: index.html
tutorials/first_steps/: index.html
